# Rit

./: .gitignore  Cargo.toml  README.md
src/: cli.rs  main.rs
src/commands/: add.rs  branch.rs  checkout.rs  commit.rs  config.rs  diff.rs  init.rs  log.rs  ls_tree.rs  merge.rs  mod.rs  remove.rs  status.rs  utils.rs
