[package]
name = "rit"
version = "1.0.0"
edition = "2024"
authors = ["Harshal Maru <harshalmaru26105@gmail.com>"]
description = "A simple, Git-like version control system written in Rust"
repository = "https://github.com/Harshal-Maru/Rit"

[dependencies]
clap = { version = "4.5.48", features = ["derive"] }
colored = "3.0.0"
dissimilar = "1.0.10"
flate2 = "1.1.2"
glob = "0.3.3"
hex = "0.4.3"
sha1 = "0.10.6"
